# VIBBLE_2D_GAME_ENGINE

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  col.py  delete.py  key.txt  package-lock.json  package.json  print_struct.bat  requirements.txt  run.bat  temp_anim_panel.cpp  tmp_patch.diff  tmp_view.json  to_do.txt  vcpkg.json
.github/workflows/: auto-approve.yml  cmake-single-platform.yml
ENGINE/: dev_mode_ui_tests.ilk  engine.cpp  engine.hpp  input.hpp  main.cpp  main.hpp  ok.py  p.py  tags.csv
ENGINE/asset/: Asset.cpp  Asset.hpp  animation.cpp  animation.hpp  animation_frame.hpp  animation_manager.cpp  animation_manager.hpp  animation_update.cpp  animation_update.hpp  asset_controller.cpp  asset_controller.hpp  asset_info.cpp  asset_info.hpp  asset_library.cpp  asset_library.hpp  asset_types.hpp  asset_utils.hpp  auto_movement.cpp  auto_movement.hpp  controller_factory.cpp  controller_factory.hpp  determine_movement.cpp  determine_movement.hpp  initialize_assets.cpp  initialize_assets.hpp  move.cpp  move.hpp
ENGINE/asset_info_methods/: animation_loader.cpp  animation_loader.hpp  area_loader.cpp  area_loader.hpp  child_loader.cpp  child_loader.hpp  lighting_loader.cpp  lighting_loader.hpp
ENGINE/audio/: audio_engine.cpp  audio_engine.hpp
ENGINE/core/: Assets.cpp  Assets.hpp  AssetsManager.cpp  AssetsManager.hpp  active_assets_manager.cpp  active_assets_manager.hpp  asset_list.cpp  asset_list.hpp  asset_loader.cpp  asset_loader.hpp  controls_manager.cpp  controls_manager.hpp  find_current_room.cpp  find_current_room.hpp
ENGINE/custom_controllers/: Bomb_controller.cpp  Bomb_controller.hpp  Bomb_controller.hpp.bak  Davey_controller.cpp  Davey_controller.hpp  Davey_default_controller.cpp  Davey_default_controller.hpp  Frog_controller.cpp  Frog_controller.hpp  Frog_controller.hpp.bak  Vibble_controller.cpp  Vibble_controller.hpp  default_controller.cpp  default_controller.hpp
ENGINE/dev_mode/: DockableCollapsible.cpp  DockableCollapsible.hpp  FloatingCollapsible.cpp  FloatingCollapsible.hpp  FloatingDockableManager.cpp  FloatingDockableManager.hpp  MapLightPanel.cpp  MapLightPanel.hpp  animation_utils.cpp  animation_utils.hpp  animations_editor_panel.cpp  animations_editor_panel.hpp  animations_floating_panel.cpp  animations_floating_panel.hpp  area_overlay_editor.cpp  area_overlay_editor.hpp  area_ui.cpp  asset_config.cpp  asset_config.hpp  asset_config_ui.cpp  asset_config_ui.hpp  asset_filter_bar.cpp  asset_filter_bar.hpp  asset_info_sections.hpp  asset_info_ui.cpp  asset_info_ui.hpp  asset_library_ui.cpp  asset_library_ui.hpp  assets_config.cpp  assets_config.hpp  camera_ui.cpp  camera_ui.hpp  dev_controls.cpp  dev_controls.hpp  dev_mouse_controls.cpp  dev_mouse_controls.hpp  dm_styles.cpp  dm_styles.hpp  draw_utils.hpp  full_screen_collapsible.cpp  (+44 more)
ENGINE/map_generation/: generate_trails.cpp  generate_trails.hpp  room.cpp
ENGINE/render/: camera.cpp  camera.hpp  debug_area.cpp  debug_area.hpp  global_light_source.cpp  global_light_source.hpp  light_map.cpp  light_map.hpp  render_area.cpp  render_area.hpp  render_asset.cpp  render_asset.hpp  scene_renderer.cpp  scene_renderer.hpp
ENGINE/room/: generate_rooms.cpp  generate_rooms.hpp  generate_trails.cpp  generate_trails.hpp  room.cpp  room.hpp  trail_geometry.cpp  trail_geometry.hpp
ENGINE/spawn/: asset_spawn_id.cpp  asset_spawn_id.hpp  asset_spawn_planner.cpp  asset_spawn_planner.hpp  asset_spawner.cpp  asset_spawner.hpp  check.cpp  check.hpp  spawn_context.cpp  spawn_context.hpp  spawn_info.hpp  spawn_logger.cpp  spawn_logger.hpp  spawn_methods.cpp  spawn_methods.hpp
ENGINE/ui/: area_ui.cpp  area_ui.hpp  asset_info_ui.cpp  asset_info_ui.hpp  asset_library_ui.cpp  asset_library_ui.hpp  button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  dev_styles.cpp  dev_styles.hpp  font_paths.hpp  loading_screen.cpp  loading_screen.hpp  main_menu.cpp  main_menu.hpp  menu_ui.cpp  menu_ui.hpp  menue_ui.cpp  slider.cpp  slider.hpp  styles.cpp  styles.hpp  text_box.cpp  text_box.hpp  tinyfiledialogs.h  widget_spacing.hpp
ENGINE/util/: range.hpp
ENGINE/utils/: area.cpp  area.hpp  area_ui.cpp  blur_util.cpp  blur_util.hpp  cache_manager.cpp  cache_manager.hpp  fade_textures.cpp  fade_textures.hpp  generate_light.cpp  generate_light.hpp  input.cpp  input.hpp  light_source.hpp  light_utils.hpp  map_grid.cpp  map_grid.hpp  mouse_input.cpp  mouse_input.hpp  parallax.cpp  parallax.hpp  range_util.cpp  range_util.hpp  rebuild_assets.cpp  rebuild_assets.hpp  shared_random.cpp  shared_random.hpp  spawn_context.cpp  spawn_context.hpp  text_style.hpp  view.cpp  view.hpp  zoom_control.cpp  zoom_control.hpp
MAPS/FORREST/: map_assets.json  map_boundary.json  map_info.json  map_light.json  spawn_log.csv
MAPS/HOME/: map_assets.json  map_boundary.json  map_info.json  map_light.json  spawn_log.csv
PYTHON ASSET MANAGER/: asset_manager_main.py  main.py  map_manager_main.py  triggers.csv
PYTHON ASSET MANAGER/asset_pages/: AnimationConfig.py  Animations.py  animation_uploader.py  basic_info.py  blend_page.py  child.py  edit_raw_json.py  lighting.py  lighting_controls.py  overlay.py  passa.py  shading.py  size.py  spacing.py  tags.py
PYTHON ASSET MANAGER/map_pages/: boundary_page.py  key_color.py  map_assets_page.py  map_info_page.py  map_layer_info.py  map_light_page.py  map_render.py  room_info.py  rooms_page.py  search_rooms.py  trails_page.py
PYTHON ASSET MANAGER/pages/: AnimationConfig.py  Animations.py  animation_uploader.py  apply_page_settings.py  area_ui.py  assets_editor.py  basic_info.py  batch_asset_editor.py  pie.py  (+34 more)
SRC/: del.py  info.json  info_schema.json  mig.py  parse_edit.py
loading/: convert.py
scripts/: add_effects.py  animation_config.py  animation_modal.py  animation_node.py  animation_ui.py  animations_pannel.py  base_node.py  bootstrap.cjs  coditions.txt  crop.py  custom_controller_manager.py  custom_updates_panel.py  frame_cropper.py  main.py  map_modal.py  mapper_node.py  mapping_node.py  movement_modal.py  nodes.py  preview_provider.py  run-ctest.cjs  sources_element_pannel.py  ui_state.py
(+255 files in other folders)
